--- a/blueprints/home/templates/home/home.html
+++ b/blueprints/home/templates/home/home.html
@@ -2,17 +2,26 @@
 body %}
 
 <div class="container">
-  <div class="title">分析方法一覧</div>
-  <li>カイ二乗検定</li>
-  <li>t検定</li>
-  <li>分散分析</li>
-  <li>因子分析</li>
-  <li>主成分分析</li>
-  <li>多次元尺度構成法</li>
-  <li>コレスポンデンス分析</li>
-  <li>数量化Ⅲ類</li>
-  <li>クラスター分析</li>
-  <li>潜在クラス分析</li>
+  <h3 class="title">分析方法一覧</h3>
+  <h5 class="sub-title">差の分析</h5>
+  <ul>
+    <li><a href="chi-square-test">カイ二乗検定</a></li>
+    <li><a href="t-test">t検定</a></li>
+    <li><a href="variance">分散分析</a></li>
+  </ul>
+  <h5 class="sub-title">分類の分析</h5>
+  <ul>
+    <li><a href="factor-test">因子分析</a></li>
+    <li><a href="principal-component">主成分分析</a></li>
+    <li><a href="multidimensional-scaling-test">多次元尺度構成法</a></li>
+    <li><a href="correspondence-analysis">コレスポンデンス分析</a></li>
+    <li><a href="quantification-test">数量化Ⅲ類</a></li>
+  </ul>
+  <h5 class="sub-title">要因の分析</h5>
+  <ul>
+    <li><a href="cluster-analysis">クラスター分析</a></li>
+    <li><a href="latent-class-analysis">潜在クラス分析</a></li>
+  </ul>
 </div>
 <!-- js読み込み -->
 <script
