homeから各機能への遷移設定

--- a/blueprints/analysisMethod/summaryMethod/templates/summaryMethod/login.html
+++ b/blueprints/analysisMethod/summaryMethod/templates/summaryMethod/login.html
@@ -1,5 +1,5 @@
-{% extends 'home/base.html' %} {% block title %}ログイン{% endblock %} {% block
-body %}
+{% extends 'summaryMethod/base.html' %} {% block title %}ログイン{% endblock %}
+{% block body %}
 
 <div class="container">
   <div class="title">分析方法一覧</div>
