--- a/blueprints/analysisMethod/differenceMethod/templates/differenceMethod/base.html
+++ b/blueprints/analysisMethod/differenceMethod/templates/differenceMethod/base.html
@@ -21,9 +21,18 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- ハイライト表示のための読み込み -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <title>{{ title }}</title>
   </head>
   <body>
     {% block body %} {% endblock %}
+    <script>
+      hljs.highlightAll();
+    </script>
   </body>
 </html>
